# edna-runner

./: .gitignore  README.md  conversion_amr.r  main.nf  pyproject.toml
